

2016-04-27 niel
	Add: Adding new nodes to nzedb.xml. This last script node will hold the date and ordinal of any
		script run as part of updating.
		 This will allow us to specify scripts that the updating process can run to make changes
		other than simple file changes. It is intended that the scripts will *not* be included in
		the repo, but instead be fetched from github.
2016-04-26 bart39
	Fix: Update sphinx releases_rt index when release files are added.
		*** NOTE *** - you will need to do the following to update the sphinx index:
    		1) stop sphinxsearch - `sudo service sphinxsearch stop`
    		2) clear old index - `sudo rm /var/lib/sphinxsearch/data/*`
    		3) start sphinxsearch - `sudo service sphinxsearch start`
    		4) populate the index - `php /var/www/nZEDb/misc/sphinxsearch/populate_rt_indexes.php releases_rt`
2016-04-26 niel
	Add: Hash of git's current HEAD to version console command's git option.
	Fix: robots.txt incorrectly named robot.txt
2016-04-25 bart39
	Fix: Iterator for populate_rt_indexes - fixes issue #2116.
2016-04-25 niel
	Add: New action 'predb' for Update console command. Only a stub method for now.
2016-04-24 niel
	Fix: Make Category IDs for 'Other' sub-categories match the code values.
	Chg: Increase Composer's process-timeout value to 6 hours, so update db doesn't time out so
		easily.
	Chg: Add 'pre-install-cmd' back to composer.json so that git pull gets run by composer install.
	Chg: Revert the 'pre-install-cmd' change. Keep forgetting that for the dev branch to be
		updated to the last commit, I have to update the lock file so the hash gets updated.
2016-04-22 DariusIII
	Fix: Links to detail pages in Gamma theme (remove release name).
2016-04-19 niel
	Mrg: PR 2113, from Wally73 - simple-expanded.sh Screen script.
	Chg: Removed the .../cli/versions.php script. Use './zed version all' instead.
	Chg: Added nZEDb to li3 as a library, complete with .../nzedb/bootstrap.php file.